spring_boot_application/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: staging-order
  name: staging-order
  namespace: nges-core-framework
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: staging-staging-order
  type: ClusterIP
